# redline-reveal-gdg-hackathon-2026

./: .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  judges_instructions.md  run.sh
backend/: main.py  pyproject.toml
backend/agents/: __init__.py  dispatch_agent.py  hmda_analyst.py  lender_investigator.py
backend/data/: nyc_zip_codes.json
backend/mcp_server/: __init__.py  hmda_tools.py  lender_tools.py  main.py
backend/tools/: __init__.py  mcp_tools.py
frontend/: app.js  index.html  style.css
